--- a/PlotBuilder/app.config
+++ b/PlotBuilder/app.config
@@ -1,3 +1,18 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <section name="PlotBuilder.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+</configSections>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><userSettings>
+        <PlotBuilder.Properties.Settings>
+            <setting name="Color" serializeAs="String">
+                <value>Blue</value>
+            </setting>
+            <setting name="DashStyle" serializeAs="String">
+                <value>Solid</value>
+            </setting>
+        </PlotBuilder.Properties.Settings>
+    </userSettings>
+</configuration>
